examples/datalog/14_aggregations/44_variance_prep.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_var
Knowledge graph 'test_var' created.
Switched to knowledge graph: test_var
> .kg use test_var
Switched to knowledge graph: test_var
> +vals[(10,), (20,), (30,)].
Inserted 3 fact(s) into 'vals'.
> +total(<SUM:V>) :- vals(V).
Script error: Parse error: Invalid term: '<SUM:V>'
